--- a/src/app/dashboard/components/recent-order/recent-order.component.html
+++ b/src/app/dashboard/components/recent-order/recent-order.component.html
@@ -42,9 +42,9 @@
 
   <!-- mobile table  -->
   <div class="lg:hidden">
-    <table class="table-auto flex justify-between">
+    <table class="table-auto">
       <thead class="">
-        <tr class="flex flex-col">
+        <tr class="w-[320px] overflow-x-scroll flex scrollbar-hide">
           <th class="uppercase text-sm font-normal text-gray-600 p-2">
             Order Id
           </th>
@@ -58,16 +58,18 @@
           </th>
         </tr>
       </thead>
-      <tbody>
-        <tr class="flex flex-col">
-          <td class="uppercase text-sm p-2">#2343</td>
-          <td class="uppercase text-sm p-2 text-ciliconorange">in progress</td>
-          <td class="p-2 text-sm">
-            <!--  date {{ .slice(0, 10) }}  -->
+      <tbody *ngFor="let item of recent_orders">
+        <tr class="w-[320px] overflow-x-scroll flex scrollbar-hide">
+          <td class="uppercase text-sm p-2">{{ item._id }}</td>
+          <td class="uppercase text-sm p-2 text-ciliconorange">
+            {{ item.status }}
           </td>
-          <td class="p-2 text-sm">$5000</td>
+          <td class="p-2 text-sm">
+            {{ item.created_at | date : "dd/mm/yyyy" }}
+          </td>
+          <td class="p-2 text-sm">${{ item.total_amount / 100 }}</td>
           <td class="p-2 text-sm flex space-x-2">
-            <span>View Details</span
+            <a href="{{ item.receipt_url }}" target="_blank">Print Receipt</a
             ><span><i class="pi pi-arrow-right text-sm"></i></span>
           </td>
         </tr>
