--- a/src/app/auth/feature/signup/signup/signup.component.html
+++ b/src/app/auth/feature/signup/signup/signup.component.html
@@ -26,12 +26,13 @@
   </div>
 
   <!-- profile image -->
+
   <div class="flex flex-col space-y-2 text-sm font-medium">
-    <label class="text-gray-900">Profile Image Link</label>
+    <label class="text-gray-900">Upload Profile Image</label>
     <input
       required
       formControlName="profile_image"
-      type="url"
+      type="file"
       class="outline-none border text-gray-500 p-2"
     />
   </div>
@@ -47,6 +48,8 @@
     />
   </div>
 
+  <p>{{ signup_form.status }}</p>
+
   <!-- terms agrrement -->
   <div>
     <p class="text-sm font-normal">
@@ -58,6 +61,7 @@
   <div class="flex justify-center">
     <button
       type="submit"
+      [disabled]="signup_form.invalid"
       class="flex space-x-2 uppercase items-center p-2 bg-ciliconorange text-white w-full justify-center font-medium"
     >
       Sign up
