--- a/src/app/auth/feature/signup/signup/signup.component.html
+++ b/src/app/auth/feature/signup/signup/signup.component.html
@@ -27,14 +27,24 @@
 
   <!-- profile image -->
 
-  <div class="flex flex-col space-y-2 text-sm font-medium">
-    <label class="text-gray-900">Upload Profile Image</label>
-    <input
-      required
-      (change)="uploadImage($event)"
-      type="file"
-      class="outline-none border text-gray-500 p-2"
-    />
+  <div class="text-sm font-medium flex flex-col space-y-2">
+    <p class="text-gray-900">Upload Profile Image</p>
+    <div class="flex items-center space-x-2">
+      <input
+        required
+        (change)="uploadImage($event)"
+        type="file"
+        class="outline-none border text-gray-500 p-2"
+      />
+      @if (image_uploading) {
+
+      <app-progress-bar></app-progress-bar>
+      } @if(uploadingImageCompleted) {
+      <div>
+        <i class="pi pi-check text-green-500 text-xl"></i>
+      </div>
+      }
+    </div>
   </div>
 
   <!-- password -->
