--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -95,22 +95,22 @@
 
         <!-- add to cart section -->
         <div class="flex space-x-2">
-          <div
+          <!-- <div
             class="border flex w-[20%] justify-between p-2 px-3 items-center"
           >
             <button (click)="decreaseNumber()">-</button>
             <p>{{ numberofItems_addToCart }}</p>
             <button (click)="increaseNumber()">+</button>
-          </div>
+          </div> -->
           <div
             (click)="addToCart(product)"
-            class="w-[60%] bg-ciliconorange flex text-white items-center justify-center p-2 uppercase space-x-3 font-semibold"
+            class="bg-ciliconorange w-full flex text-white items-center justify-center p-2 uppercase space-x-3 font-semibold"
           >
             <span>Add to cart</span>
             <img src="../../../assets/icons/cart.svg" class="w-6" />
           </div>
           <button
-            class="p-2 border-ciliconorange text-ciliconorange uppercase border w-[20%]"
+            class="p-2 w-full border-ciliconorange text-ciliconorange uppercase border"
           >
             buy now
           </button>
@@ -120,21 +120,20 @@
           <div class="flex space-x-2">
             <div class="flex text-sm items-center space-x-1 text-gray-500">
               @if (!addtoFav) {
+              <i
+                class="pi pi-heart"
+                style="font-size: 1rem"
+                (click)="add_to_Wishlist(product)"
+              ></i>
 
-              <mat-icon
-                fontSet="material-symbols-outlined"
-                (click)="favoriteModal()"
-                class="text-gray-500"
-                width="6px"
-                >favorite</mat-icon
-              >
               } @else {
 
-              <mat-icon
-                (click)="favoriteModal()"
-                fontIcon="favorite"
-                class="text-ciliconorange"
-              ></mat-icon>
+              <i
+                class="pi pi-heart-fill"
+                style="font-size: 1rem"
+                style="color: #fa8232"
+                (click)="add_to_Wishlist(product)"
+              ></i>
               }
               <p>Add to wishlist</p>
             </div>
