--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -51,7 +51,7 @@
           </p>
         </div>
       </div>
-
+      @if (current_user) {
       <div (click)="goToDashboard()">
         <i
           class="pi pi-user"
@@ -59,6 +59,8 @@
         ></i>
         <!-- <img class="w-6" src="./../../assets/icons/user.svg" /> -->
       </div>
+      }
+
       <div>
         <i
           [routerLink]="['/auth']"
