--- a/src/app/components/mobile-shopping-cart-item/mobile-shopping-cart-item.component.html
+++ b/src/app/components/mobile-shopping-cart-item/mobile-shopping-cart-item.component.html
@@ -1,11 +1,14 @@
 <div class="md:hidden py-4 border-b">
   <div class="flex w-full text-sm justify-between space-x-2">
+    @if (product.images) {
     <img
       ngSrc="{{ product.images[0] }}"
       class="w-[72px] object-contain"
       width="72"
       height="72"
     />
+    }
+
     <div class="space-y-1">
       <p class="font-semibold line-clamp-2">{{ product.name }}</p>
       <p class="text-gray-500">Stock: {{ product.stock }}</p>
