need to work on dash loading

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div
-  class="p-4 md:p-0 md:w-[800px] lg:w-[1200px] m-auto md:pt-[40px] md:pb-[72px] min-h-[100vh]"
+  class="p-4 md:p-0 md:w-[800px] lg:w-[1200px] m-auto md:pt-[40px] md:pb-[72px]"
 >
   <div class="flex justify-between">
     <!-- <app-side-panel> </app-side-panel> -->
