--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="relative">
   <app-header></app-header>
-  <router-outlet></router-outlet>
+  <router-outlet class="min-h-[100vh]"></router-outlet>
   <app-footer></app-footer>
   <div
     *ngIf="isquickviewEnabled | async"
