the top section for dashboard laoding is complete

--- a/src/app/dashboard/feature/main/main.component.html
+++ b/src/app/dashboard/feature/main/main.component.html
@@ -33,3 +33,8 @@
     <app-recent-order></app-recent-order>
   </section>
 </main>
+
+<!-- loaddingggg -->
+<div #loading>
+  <app-main-loading></app-main-loading>
+</div>
