--- a/src/app/dashboard/components/loading/main-loading/main-loading.component.html
+++ b/src/app/dashboard/components/loading/main-loading/main-loading.component.html
@@ -141,17 +141,17 @@
       <div class="h-[88px] p-4 flex space-x-4 bg-[#EAF6FE]">
         <ngx-skeleton-loader
           count="1"
-          [theme]="{ height: '56px', width: '56px' }"
+          [theme]="{ height: '56px', width: '56px', background: 'white' }"
         ></ngx-skeleton-loader>
 
         <div class="flex flex-col">
           <ngx-skeleton-loader
             count="1"
-            [theme]="{ height: '20px', width: '85px' }"
+            [theme]="{ height: '20px', width: '85px', background: 'white' }"
           ></ngx-skeleton-loader>
           <ngx-skeleton-loader
             count="1"
-            [theme]="{ height: '14px', width: '100px' }"
+            [theme]="{ height: '14px', width: '100px', background: 'white' }"
           ></ngx-skeleton-loader>
         </div>
       </div>
@@ -159,17 +159,17 @@
       <div class="h-[88px] p-4 flex space-x-4 bg-[#FFF3EB]">
         <ngx-skeleton-loader
           count="1"
-          [theme]="{ height: '56px', width: '56px' }"
+          [theme]="{ height: '56px', width: '56px', background: 'white' }"
         ></ngx-skeleton-loader>
 
         <div class="flex flex-col">
           <ngx-skeleton-loader
             count="1"
-            [theme]="{ height: '20px', width: '85px' }"
+            [theme]="{ height: '20px', width: '85px', background: 'white' }"
           ></ngx-skeleton-loader>
           <ngx-skeleton-loader
             count="1"
-            [theme]="{ height: '14px', width: '100px' }"
+            [theme]="{ height: '14px', width: '100px', background: 'white' }"
           ></ngx-skeleton-loader>
         </div>
       </div>
@@ -177,17 +177,17 @@
       <div class="h-[88px] p-4 flex space-x-4 bg-[#EAF7E9]">
         <ngx-skeleton-loader
           count="1"
-          [theme]="{ height: '56px', width: '56px' }"
+          [theme]="{ height: '56px', width: '56px', background: 'white' }"
         ></ngx-skeleton-loader>
 
         <div class="flex flex-col">
           <ngx-skeleton-loader
             count="1"
-            [theme]="{ height: '20px', width: '85px' }"
+            [theme]="{ height: '20px', width: '85px', background: 'white' }"
           ></ngx-skeleton-loader>
           <ngx-skeleton-loader
             count="1"
-            [theme]="{ height: '14px', width: '100px' }"
+            [theme]="{ height: '14px', width: '100px', background: 'white' }"
           ></ngx-skeleton-loader>
         </div>
       </div>
