--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -17,7 +17,7 @@
     <tbody class="">
       <tr
         *ngFor="let item of wishListItems"
-        class="space-y-[16px] hover:bg-gray-50"
+        class="space-y-[16px] hover:bg-gray-50 border-b"
       >
         <td
           (click)="routeToProductDetail(item)"
