loading for card payment complete

--- a/src/app/dashboard/components/loading/main-loading/main-loading.component.html
+++ b/src/app/dashboard/components/loading/main-loading/main-loading.component.html
@@ -2,9 +2,14 @@
   <!-- heading -->
   <section id="heading" class="space-y-2">
     <ngx-skeleton-loader
-      [theme]="{ width: '400px', height: '32px' }"
+      animation="pulse"
+      [theme]="{ width: '400px', height: '12px' }"
     ></ngx-skeleton-loader>
-    <ngx-skeleton-loader [theme]="{ height: '40px' }"></ngx-skeleton-loader>
+    <ngx-skeleton-loader
+      animation="pulse"
+      count="2"
+      [theme]="{ height: '10px' }"
+    ></ngx-skeleton-loader>
   </section>
 
   <!-- top section -->
@@ -17,6 +22,7 @@
       <div class="">
         <div class="p-6 h-[52px] border-b flex items-center">
           <ngx-skeleton-loader
+            animation="pulse"
             [theme]="{ width: '150px', height: '4px' }"
           ></ngx-skeleton-loader>
         </div>
@@ -24,15 +30,18 @@
           <!-- profile -->
           <div class="flex">
             <ngx-skeleton-loader
+              animation="pulse"
               appearance="circle"
               [theme]="{ width: '48px', height: '48px' }"
             />
             <div class="flex flex-col">
               <ngx-skeleton-loader
+                animation="pulse"
                 count="1"
                 [theme]="{ height: '20px', width: '197.13px' }"
               />
               <ngx-skeleton-loader
+                animation="pulse"
                 count="1"
                 [theme]="{ height: '20px', width: '197.13px' }"
               />
@@ -42,18 +51,21 @@
           <div>
             <div class="space-x-2">
               <ngx-skeleton-loader
+                animation="pulse"
                 count="1"
                 [theme]="{ hieght: '4px' }"
               ></ngx-skeleton-loader>
             </div>
             <div class="space-x-2">
               <ngx-skeleton-loader
+                animation="pulse"
                 count="1"
                 [theme]="{ hieght: '4px' }"
               ></ngx-skeleton-loader>
             </div>
             <div class="space-x-2">
               <ngx-skeleton-loader
+                animation="pulse"
                 count="1"
                 [theme]="{ hieght: '4px' }"
               ></ngx-skeleton-loader>
@@ -62,6 +74,7 @@
           <!-- edit account button -->
           <div class="w-[155px]">
             <ngx-skeleton-loader
+              animation="pulse"
               count="1"
               [theme]="{
                 height: '20px',
@@ -80,6 +93,7 @@
       <div class="">
         <div class="p-6 h-[52px] border-b flex items-center">
           <ngx-skeleton-loader
+            animation="pulse"
             [theme]="{ width: '150px', height: '4px' }"
           ></ngx-skeleton-loader>
         </div>
@@ -88,10 +102,12 @@
           <div class="flex">
             <div class="flex flex-col">
               <ngx-skeleton-loader
+                animation="pulse"
                 count="1"
                 [theme]="{ height: '20px', width: '197.13px' }"
               />
               <ngx-skeleton-loader
+                animation="pulse"
                 count="1"
                 [theme]="{ height: '20px', width: '197.13px' }"
               />
@@ -101,18 +117,21 @@
           <div>
             <div class="space-x-2">
               <ngx-skeleton-loader
+                animation="pulse"
                 count="1"
                 [theme]="{ hieght: '4px' }"
               ></ngx-skeleton-loader>
             </div>
             <div class="space-x-2">
               <ngx-skeleton-loader
+                animation="pulse"
                 count="1"
                 [theme]="{ hieght: '4px' }"
               ></ngx-skeleton-loader>
             </div>
             <div class="space-x-2">
               <ngx-skeleton-loader
+                animation="pulse"
                 count="1"
                 [theme]="{ hieght: '4px' }"
               ></ngx-skeleton-loader>
@@ -121,6 +140,7 @@
           <!-- edit account button -->
           <div class="w-[155px]">
             <ngx-skeleton-loader
+              animation="pulse"
               count="1"
               [theme]="{
                 height: '20px',
@@ -132,7 +152,6 @@
         </div>
       </div>
     </div>
-
     <!-- closed billing address card -->
 
     <!-- fun fact section opening -->
@@ -140,16 +159,19 @@
       <!-- total orders card -->
       <div class="h-[88px] p-4 flex space-x-4 bg-[#EAF6FE]">
         <ngx-skeleton-loader
+          animation="pulse"
           count="1"
           [theme]="{ height: '56px', width: '56px', background: 'white' }"
         ></ngx-skeleton-loader>
 
         <div class="flex flex-col">
           <ngx-skeleton-loader
+            animation="pulse"
             count="1"
             [theme]="{ height: '20px', width: '85px', background: 'white' }"
           ></ngx-skeleton-loader>
           <ngx-skeleton-loader
+            animation="pulse"
             count="1"
             [theme]="{ height: '14px', width: '100px', background: 'white' }"
           ></ngx-skeleton-loader>
@@ -158,16 +180,19 @@
       <!-- pending orders card -->
       <div class="h-[88px] p-4 flex space-x-4 bg-[#FFF3EB]">
         <ngx-skeleton-loader
+          animation="pulse"
           count="1"
           [theme]="{ height: '56px', width: '56px', background: 'white' }"
         ></ngx-skeleton-loader>
 
         <div class="flex flex-col">
           <ngx-skeleton-loader
+            animation="pulse"
             count="1"
             [theme]="{ height: '20px', width: '85px', background: 'white' }"
           ></ngx-skeleton-loader>
           <ngx-skeleton-loader
+            animation="pulse"
             count="1"
             [theme]="{ height: '14px', width: '100px', background: 'white' }"
           ></ngx-skeleton-loader>
@@ -176,16 +201,19 @@
       <!-- completed orders card -->
       <div class="h-[88px] p-4 flex space-x-4 bg-[#EAF7E9]">
         <ngx-skeleton-loader
+          animation="pulse"
           count="1"
           [theme]="{ height: '56px', width: '56px', background: 'white' }"
         ></ngx-skeleton-loader>
 
         <div class="flex flex-col">
           <ngx-skeleton-loader
+            animation="pulse"
             count="1"
             [theme]="{ height: '20px', width: '85px', background: 'white' }"
           ></ngx-skeleton-loader>
           <ngx-skeleton-loader
+            animation="pulse"
             count="1"
             [theme]="{ height: '14px', width: '100px', background: 'white' }"
           ></ngx-skeleton-loader>
@@ -195,4 +223,93 @@
     <!-- //// fun fact closing -->
   </section>
   <!--  -->
+
+  <!-- payment option -->
+  <section id=" payment option">
+    <div class="border">
+      <div class="p-4 border-b flex justify-between">
+        <h3 class="uppercase text-gray-900 font-medium">payment option</h3>
+        <div class="text-[#FA8232] text-sm space-x-2 flex items-center">
+          <span>Add Card</span>
+          <i class="pi pi-arrow-right"></i>
+        </div>
+      </div>
+      <!-- cards -->
+      <div class="p-4 space-y-4 md:flex md:space-y-0 md:gap-4">
+        <div
+          class="w-[296px] h-[196px] bg-gradient-to-br from-[#1B6392] to-[#124261] rounded-md p-6 flex flex-col justify-between"
+        >
+          <!-- apple card -->
+          <!-- card amount -->
+          <div class="flex justify-between font-medium">
+            <ngx-skeleton-loader
+              animation="pulse"
+              count="1"
+              [theme]="{ width: '120px', height: '4px' }"
+            ></ngx-skeleton-loader>
+            <ngx-skeleton-loader
+              animation="pulse"
+              count="1"
+              [theme]="{ width: '20px', height: '4px' }"
+            ></ngx-skeleton-loader>
+          </div>
+          <!-- card number -->
+          <div class="text-white">
+            <p class="uppercase text-xs opacity-70 font-light">Card number</p>
+            <ngx-skeleton-loader
+              animation="pulse"
+              count="1"
+              [theme]="{ width: '150px', height: '6px' }"
+            ></ngx-skeleton-loader>
+          </div>
+          <!-- apple pay -->
+          <div class="text-white flex justify-between items-center">
+            <i class="pi pi-apple" style="font-size: 30px"></i>
+            <ngx-skeleton-loader
+              animation="pulse"
+              count="1"
+              [theme]="{ width: '150px', height: '4px' }"
+            ></ngx-skeleton-loader>
+          </div>
+        </div>
+        <!-- paypal card -->
+        <div
+          class="w-[296px] h-[196px] bg-gradient-to-tl from-[#248E1D] to-[#2DB224] rounded-md p-6 flex flex-col justify-between"
+        >
+          <!-- apple card -->
+          <!-- card amount -->
+          <div class="flex justify-between font-medium">
+            <ngx-skeleton-loader
+              animation="pulse"
+              count="1"
+              [theme]="{ width: '120px', height: '4px' }"
+            ></ngx-skeleton-loader>
+            <ngx-skeleton-loader
+              animation="pulse"
+              count="1"
+              [theme]="{ width: '20px', height: '4px' }"
+            ></ngx-skeleton-loader>
+          </div>
+          <!-- card number -->
+          <div class="text-white">
+            <p class="uppercase text-xs opacity-70 font-light">Card number</p>
+            <ngx-skeleton-loader
+              animation="pulse"
+              count="1"
+              [theme]="{ width: '150px', height: '6px' }"
+            ></ngx-skeleton-loader>
+          </div>
+          <!-- apple pay -->
+          <div class="text-white flex justify-between items-center">
+            <i class="pi pi-paypal" style="font-size: 30px"></i>
+            <ngx-skeleton-loader
+              animation="pulse"
+              count="1"
+              [theme]="{ width: '150px', height: '4px' }"
+            ></ngx-skeleton-loader>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </main>
