order history loading is complete

--- a/src/app/dashboard/components/loading/main-loading/main-loading.component.html
+++ b/src/app/dashboard/components/loading/main-loading/main-loading.component.html
@@ -312,4 +312,8 @@
       </div>
     </div>
   </section>
+
+  <section id="recent order">
+    <app-order-history-loading></app-order-history-loading>
+  </section>
 </main>
