wishlist layout fix

--- a/src/app/dashboard/components/recent-order/recent-order.component.html
+++ b/src/app/dashboard/components/recent-order/recent-order.component.html
@@ -23,7 +23,7 @@
       <tbody class="">
         <tr
           *ngFor="let item of recent_orders"
-          class="text-sm font-medium hover:bg-gray-50"
+          class="text-sm font-medium hover:bg-gray-50 border-b"
         >
           <td class="p-4">{{ item._id }}</td>
           <td class="p-4 uppercase text-ciliconorange">{{ item.status }}</td>
