--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -1,6 +1,8 @@
 <div
-  class="p-4 md:p-0 md:w-[800px] lg:w-[1200px] m-auto my-[72px]"
-  [ngStyle]="{ width: viewing_in_dashboard ? '984px' : '' }"
+  class="p-4 md:p-0 md:w-[800px] lg:w-[1200px] m-auto"
+  [ngStyle]="
+    viewing_in_dashboard ? { width: '984px' } : { margin: '20px auto' }
+  "
 >
   <div class="border p-4">
     <h1 class="text-gray-900 font-semibold">Wishlist</h1>
