fixed the weird layout shift in product-detail page - changed the @if and else@ block with usual ngif template calling the ng-template #loading

--- a/src/app/components/product-detail-loading/product-detail-loading.component.html
+++ b/src/app/components/product-detail-loading/product-detail-loading.component.html
@@ -8,11 +8,12 @@
         <ngx-skeleton-loader [theme]="{ height: '96px', width: '96px' }" />
         <ngx-skeleton-loader [theme]="{ height: '96px', width: '96px' }" />
         <ngx-skeleton-loader [theme]="{ height: '96px', width: '96px' }" />
+        <ngx-skeleton-loader [theme]="{ height: '96px', width: '96px' }" />
       </div>
     </section>
 
-    <section id="product_information" class="space-y-4 lg:w-full">
-      <div class="flex justify-between">
+    <section id="product_information" class="space-y-4 lg:w-full mt-10">
+      <div class="flex">
         <ngx-skeleton-loader [theme]="{ width: '100px' }" />
         <ngx-skeleton-loader [theme]="{ width: '100px' }" />
       </div>
@@ -34,8 +35,6 @@
       </div>
       <div class="w-full h-[1px] bg-gray-200"></div>
       <div>
-        <ngx-skeleton-loader [theme]="{ height: '10px' }" />
-        <ngx-skeleton-loader [theme]="{ height: '10px' }" />
         <ngx-skeleton-loader [theme]="{ height: '10px' }" />
         <ngx-skeleton-loader [theme]="{ height: '10px' }" />
         <ngx-skeleton-loader [theme]="{ height: '10px' }" />
