fixed error in the angular 19

--- a/src/app/components/quick-view/quick-view.component.html
+++ b/src/app/components/quick-view/quick-view.component.html
@@ -136,7 +136,7 @@
             <p>Add to wishlist</p>
           </div>
           <div class="flex items-center space-x-1 text-sm text-gray-500">
-            <mat-icon fontSet="material-symbols-outlined">autorenew</mat-icon>
+            <span class="material-symbols-outlined"> autorenew </span>
             <p>Add to Compare</p>
           </div>
         </div>
