--- a/src/app/dashboard/components/account-info-card/account-info-card.component.html
+++ b/src/app/dashboard/components/account-info-card/account-info-card.component.html
@@ -7,7 +7,7 @@
       <!-- profile -->
       <div class="flex space-x-4">
         <img
-          ngSrc="{{ user.profile_image }}"
+          src="{{ user.profile_image }}"
           class="w-[48px] h-[48px] rounded-full object-cover"
         />
 
