cursor updated for dash icon

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -52,7 +52,7 @@
         </div>
       </div>
 
-      <div (click)="goToDashboard()">
+      <div (click)="goToDashboard()" class="cursor-pointer">
         <i
           class="pi pi-user"
           [style]="{ 'font-size': '1.25rem', color: 'white' }"
