--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -1,4 +1,5 @@
 <div
+  *ngIf="wishListItems.length > 0; else noItemsMessage"
   class="p-4 md:p-0 md:w-[800px] lg:w-[1200px] m-auto"
   [ngStyle]="
     viewing_in_dashboard ? { width: '984px' } : { margin: '20px auto' }
@@ -104,3 +105,12 @@
   </table>
 </div>
 <p-toast />
+
+<ng-template #noItemsMessage>
+  <div class="flex justify-center items-center h-[400px]">
+    <div class="flex justify-center space-x-4 items-center text-gray-500">
+      <i class="pi pi-heart text-4xl"></i>
+      <p class="text-2xl">No items found in Wishlist</p>
+    </div>
+  </div>
+</ng-template>
