fixed cart page layout

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -3,8 +3,12 @@
 >
   <!-- shopping card -->
 
-  <div class="hidden md:inline-block border">
-    <h2 class="p-4 text-lg font-medium text-gray-900">Shopping Card</h2>
+  <div class="hidden md:flex md:flex-col">
+    <h2
+      class="p-4 text-lg font-medium text-gray-900 border-t border-r border-l"
+    >
+      Shopping Card
+    </h2>
     <table class="table-auto w-full border">
       <thead class="border border-gray-100">
         <tr class="bg-gray-50 text-sm uppercase">
@@ -49,18 +53,6 @@
         </tr>
       </tbody>
     </table>
-    <div class="border p-4 flex justify-between">
-      <div
-        class="p-4 text-[#2DA5F3] flex space-x-2 items-center border border-[#2DA5F3] uppercase"
-      >
-        <img ngSrc="../../assets/icons/arrowback.png" width="20" height="20" />
-        <p class="font-semibold">return to shop</p>
-      </div>
-
-      <div class="p-4 text-[#2DA5F3] border border-[#2DA5F3] uppercase">
-        <p class="font-semibold">update cart</p>
-      </div>
-    </div>
   </div>
 
   <!-- mobileshopping card -->
