google auth working

--- a/src/app/auth/feature/signin/signin/signin.component.html
+++ b/src/app/auth/feature/signin/signin/signin.component.html
@@ -38,12 +38,14 @@
     <div class="h-0.5 w-full bg-gray-100"></div>
   </div>
   <!-- google and apple signin -->
-  <div
+  <a
+    href="https://meancommerce-backend.onrender.com/api/v1/auth/google"
+    routerLinkActive="router-link-active"
     class="w-full p-2 border cursor-pointer text-sm text-gray-700 flex items- font-normal justify-center space-x-4"
   >
     <i class="pi pi-google"></i>
     <span>Login with Google</span>
-  </div>
+  </a>
 
   <div
     class="w-full p-2 border cursor-pointer text-sm text-gray-700 flex font-normal items-center justify-center space-x-4"
