--- a/src/app/return/return.component.html
+++ b/src/app/return/return.component.html
@@ -1,17 +1,29 @@
 <main class="h-[600px]">
   <div
+    *ngIf="session_Status; else loading"
     class="flex space-y-4 justify-center items-center flex-col text-center h-full"
   >
     <i class="pi pi-verified" style="color: #2db224; font-size: 4rem"></i>
     <h1 class="font-bold text-2xl">
-      Congratulations {{ session_Status?.customer_name }}
+      Congratulations {{ session_Status.customer_name }}
     </h1>
 
     <p>Your order is successfull</p>
     <p>
       You will soon receive an email to your account:
-      {{ session_Status?.customer_email }}
+      {{ session_Status.customer_email }}
     </p>
     <div></div>
   </div>
 </main>
+
+<ng-template #loading>
+  <div class="card flex justify-content-center">
+    <p-progressSpinner
+      styleClass="w-4rem h-4rem"
+      strokeWidth="8"
+      fill="var(--surface-ground)"
+      animationDuration=".5s"
+    />
+  </div>
+</ng-template>
