--- a/src/app/return/return.component.html
+++ b/src/app/return/return.component.html
@@ -18,12 +18,14 @@
 </main>
 
 <ng-template #loading>
-  <div class="card flex justify-content-center">
-    <p-progressSpinner
-      styleClass="w-4rem h-4rem"
-      strokeWidth="8"
-      fill="var(--surface-ground)"
-      animationDuration=".5s"
-    />
+  <div class="flex justify-center items-center h-full w-full">
+    <div class="card flex justify-content-center">
+      <p-progressSpinner
+        styleClass="w-4rem h-4rem"
+        strokeWidth="8"
+        fill="var(--surface-ground)"
+        animationDuration=".5s"
+      />
+    </div>
   </div>
 </ng-template>
