instruction on checkout page is provided now

--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,1 +1,24 @@
-<div id="checkout" class="h-[100vh]"></div>
+<main class="flex justify-center space-x-4 min-h-[100vh]">
+  <div id="checkout" class="w-[700px]"></div>
+
+  <div class="border-l rounded-lg w-[500px] p-8 space-y-4">
+    <h2 class="text-2xl font-medium">This is a Demo Checkout</h2>
+    <p>
+      This demo stripe checkout doesn't put a charge. It's just made for demo
+      purpose
+    </p>
+    <p>
+      Please enter
+      <span class="font text-[#5469D4]"> 4242 4242 4242 4242</span> as the card
+      number
+    </p>
+    <li>Use any valid future date</li>
+    <li>Use any three-digit CVC number</li>
+    <li>Use any other values you would like in other form fields.</li>
+    <img
+      ngSrc="https://b.stripecdn.com/docs-statics-srv/assets/test-card.c3f9b3d1a3e8caca3c9f4c9c481fd49c.jpg"
+      width="260"
+      height="300"
+    />
+  </div>
+</main>
